Ändrat storlek på text om man är inne på mobil, samt lagt till margin högst upp på alla sidor ist för <br> och lite annat fix

--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -11,12 +11,11 @@
     <h2 class="sidrubrik">Felanmälan</h2>
 
 <div class="maincontainer1">
-    <br />
-    <br />
-    <div class="row">
-        <div class=" col-md-1 flikleft flik"><button class="flikbutton btnleft" id="flikbtn1" type="button" onclick="hideshown2()" >Privatperson</button></div>
+
+    <div class="row ontop">
+        <div class=" col-md-1 flikleft flik"><button class="flikbutton btnleft" id="flikbtn1" type="button" onclick="hideshown2()">Privatperson</button></div>
         <div class=" col-md-1 flik"><button class="flikbutton" id="flikbtn2" type="button" onclick="hideshown();">Företag</button></div>
-       
+
     </div>
     <div class="row">
         
