--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -17,10 +17,9 @@
         <div style=" text-align: center;"><h2 class="sidrubrik">Startsida</h2></div>
 
 <div class="maincontainer1">
-    <br />
-    <br />
 
-    <div class="row">
+    <div class="row ontop">
+
         <div class="col-md-7 col-sm-7 col-lg-7 indexcarousel">
           
             <div class="mainbody">
@@ -95,11 +94,9 @@
     <hr />
     
         <div class=" row" style="margin-left:5%; margin-right:5%;">
-            <div class=" rubrik" style="margin-left: 55px; ">
-                
-            </div>
+            
             <br />
-            <div class=" col-md-9 col-sm-11 nyhetindex">
+            <div class=" col-md-9 col-sm-10 nyhetindex">
                 <h2>Senaste nytt</h2>
                 <div class="nyhet " style="text-align: center; margin: auto;">
                     <h2>Glad påsk!</h2>
