--- a/design/design/Views/Home/Intresseanmalan2.cshtml
+++ b/design/design/Views/Home/Intresseanmalan2.cshtml
@@ -5,9 +5,8 @@
 
 <h2 class="sidrubrik">Intresseanmälan</h2>
 <div class="maincontainer1">
-    <br />
-    <br />
-    <div class="row">
+
+    <div class="row ontop">
         <div class="col-md-5 leftdiv">
             <div class="form-group">
                 <div class="falt">
@@ -83,12 +82,12 @@
                 </div>
 
                 <div class="falt">
-                    <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label> 
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-        <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
-    </div>
-</div>
+                    <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
+                        <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
+                    </div>
+                </div>
 
                 <div class="falt">
                     <label>Årsinkomst: *</label>
@@ -98,7 +97,7 @@
                     </div>
                 </div>
 
-              
+
 
                 <div class="falt">
                     <label>Egna ord:</label>
@@ -205,7 +204,7 @@
                         </div>
                     </div>
 
-               
+
                 </div>
 
                 <br />
@@ -221,7 +220,7 @@
         <div class="col-md-4 rightdiv information">
             <p style="font-size:x-large;"><b>Intresseanmälan gäller endast för:</b></p>
             <h4>
-                 <b>Adress:</b> Rynningegatan 27 <br />
+                <b>Adress:</b> Rynningegatan 27 <br />
                 <b>Antal rum:</b> 3
                 <br /><b>Hyra:</b> 7000 kr/månad
 
