--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -3,10 +3,9 @@
 }
 <center><h2 class="sidrubrik">Lediga objekt</h2></center>
 <div class="maincontainer1">
-    <br />
-    <br />
-    <div class=" row">
-       
+
+    <div class=" row ontop">
+
         <div class=" col-md-2 rightsort">
             <label>Sortera</label>
             <br />
@@ -28,15 +27,15 @@
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Seniorboende 55+</a></li>
                 </ul>
             </div>
-           
-       
-        
+
+
+
         </div>
-        
+
         <div class=" col-md-8 filtreraruta-stor">
             <label>Filtrera</label>
             <div class="row filtreraruta">
-                <div class=" col-md-2 filtrera filtrera-left" >
+                <div class=" col-md-2 filtrera filtrera-left">
                     <div class="falt">
                         <label>Minst antal rum</label>
                         <div style="width: 60px;">
