--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -6,8 +6,7 @@
 <center><h2 class="sidrubrik">Våra fastigheter/Seniorboende 55+</h2></center>
 
 <div class="maincontainer1">
-    <div class="maincontainer">
-
+    <div class="maincontainer ontop">
         <center>
             <div class="row">
                 <div class="col-lg-4">
@@ -20,11 +19,12 @@
                 <div class="col-md-2">
                 </div>
                 <div class="col-md-8">
-                    
+
 
                     <center><img class="img-responsive" src="~/Content/Images/Senior.jpeg" alt=""></center><h3>
-                    Välkommen till seniorboendet Nära Till!</h3>
-                  
+                        Välkommen till seniorboendet Nära Till!
+                    </h3>
+
                     <br />
                     <p style=" text-align:left;">
                         Nära Till klassas av Örebro kommun som ett seniorboende Kategori 3. Det är den högsta kategorin och ett erkännande av vår fina service. <br />
@@ -35,8 +35,8 @@
 
             </div>
         </center>
-       
-            <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
-        
-        </div>
+
+        <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
+
+    </div>
     </div>
