--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1087,12 +1087,6 @@ h2.sidrubrik{
     color:#6d6d6d;
 }
 
-div.nyhet{
- border:1px solid #ddd;
- border-bottom: 0px;
- padding: 0 20px;
-  box-shadow: 0px 5px 5px #888888;
-}
 /*"Helvetica Neue", Helvetica, Arial, sans-serif*/
 body {
   font-family:Tahoma;
@@ -1280,27 +1274,27 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 36px;
+  font-size: 24px;
 }
 h2,
 .h2 {
-  font-size: 30px;
+  font-size: 18px;
 }
 h3,
 .h3 {
-  font-size: 24px;
+  font-size: 14px;
 }
 h4,
 .h4 {
-  font-size: 18px;
+  font-size: 12px;
 }
 h5,
 .h5 {
-  font-size: 14px;
+  font-size: 10px;
 }
 h6,
 .h6 {
-  font-size: 12px;
+  font-size: 0px;
 }
 p {
   margin: 0 0 10px;
@@ -1312,6 +1306,30 @@ p {
   line-height: 1.4;
 }
 /*Här är för mobilskärm*/
+div.ontop{
+    margin-top: 20px;
+}
+p{
+    font-size:12px;
+}
+p.rubrik-nyhetsarkiv{
+    margin-top:20px;
+    background-color:#ccc;
+}
+div.nyhetindex{
+      padding-right: 0px;
+      padding-left: 0px;
+  }
+
+div.nyhet{
+ text-align: center; 
+ margin-left:0%; 
+ margin-right: 0%;
+ border:1px solid #ddd;
+ border-bottom: 0px;
+ padding: 0 5px;
+  box-shadow: 0px 5px 5px #888888;
+}
 div.infosvar{
     display: none;
 }
@@ -2025,8 +2043,41 @@ pre code {
   }
 
   /*Nedanför här är för tablet/ipad skärm*/
+  p{
+    font-size:12px;
+}
+  p.rubrik-nyhetsarkiv{
+      margin-top:0px;
+      background-color:white;
+  }
+  div.nyhet{
+ text-align: center; 
+ margin-left:0%; 
+ margin-right: 0%;
+ border:1px solid #ddd;
+ border-bottom: 0px;
+ padding: 0 20px;
+  box-shadow: 0px 5px 5px #888888;
+}
+  div.nyhetsarkiv{
+    width:160px;
+    height: 300px;
+    margin-top:0px;
+    margin-left: 0px;
+    padding-top: 10px;
+
+    padding-right: 0px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px #333;
+    border-radius: 10px;
+    
+    background-color: white;
+}
+
   div.nyhetindex{
-      margin-left: 3%;
+      margin-left:9%;
+        padding-right: 0px;
+      padding-left: 0px;
   }
 
   div.indexcarousel{
@@ -2227,9 +2278,64 @@ pre code {
   }
   
   /*Här är för desktop*/
+  h1,
+.h1 {
+  font-size: 36px;
+}
+h2,
+.h2 {
+  font-size: 30px;
+}
+h3,
+.h3 {
+  font-size: 24px;
+}
+h4,
+.h4 {
+  font-size: 18px;
+}
+h5,
+.h5 {
+  font-size: 14px;
+}
+h6,
+.h6 {
+  font-size: 12px;
+}
+  div.ontop{
+    margin-top: 50px;
+}
+  p{
+      font-size:14px;
+  }
+  div.nyhet{
+ text-align: center; 
+ margin-left:5%; 
+ margin-right: 5%;
+ border:1px solid #ddd;
+ border-bottom: 0px;
+ padding: 0 20px;
+  box-shadow: 0px 5px 5px #888888;
+}
+div.nyhetsarkiv{
+    width:180px;
+    height: 300px;
+    
+    margin-left: 30px;
+    padding-top: 10px;
+
+    padding-right: 0px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px #333;
+    border-radius: 10px;
+    
+    background-color: white;
+}
 
  div.nyhetindex{
       margin-left: 10%;
+        padding-right: 15px;
+      padding-left: 15px;
   }
  div.indexcarousel{
      margin-left: 0px;
@@ -2416,6 +2522,10 @@ pre code {
   }
 
   /*Här är för Stor desktop*/
+  p.rubrik-nyhetsarkiv{
+      margin-top: 0px;
+    background-color:white;
+}
    div.indexcarousel{
       margin-left: 0px;
   }
@@ -7148,7 +7258,7 @@ div.divfastigheter{
 }
 
 div.divfastigheter2{
-    margin-top: 100px;
+    margin-top: 20px;
     margin-left: 50px;
 }
 
@@ -7193,21 +7303,6 @@ top: 0;
 left: 0;
 width: 100% !important;
 height: 100% !important;
-}
-
-div.nyhetsarkiv{
-        width:220px;
-    height: 300px;
-    
-    margin-left: 30px;
-    padding-top: 10px;
-
-    padding-right: 0px;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 4px #333;
-    border-radius: 10px;
-    
-    background-color: white;
 }
 
 div.information{
