--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -5,7 +5,7 @@
 
 <center><h2 class="sidrubrik">Kontakta oss</h2></center>
 <div class="maincontainer1">
-    <div class="maincontainer">
+    <div class="maincontainer ontop">
         <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4 divleft">
                 <h3 class="red">John Ekströms bygg AB</h3>
@@ -15,7 +15,7 @@
                     <br />702 83 Örebro
                     <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
                 </p>
-               
+
             </div>
             <div class="col-sm-4 col-md-4 col-lg-4">
                 <h3 class="red">Kontorets öppettider</h3>
