--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -6,15 +6,11 @@
 
     <div style="text-align:center;"><h2 class="sidrubrik">Nyheter</h2></div>
     <div class="maincontainer1">
-    <br />
-    <br />
-        <br />
-        <br />
-
-        <div class=" row">
+  
+        <div class=" row ontop">
           
-            <div class=" col-md-9">
-                <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
+            <div class="col-xs-12 col-sm-9 col-md-9">
+                <div class="nyhet">
                     <h2>Glad påsk!</h2>
                     <p style="text-align:left;">
                         Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
@@ -32,15 +28,15 @@
                     <p style="text-align:right;">2017-04-12</p>
                 </div>
                 <br />
-                <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
+                <div class="nyhet">
                     <h2>Spara vatten!</h2>
                     <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <p style="text-align:right;">2017-04-10</p>
                 </div>
             </div>
-            <div class=" col-md-3 nyhetsarkiv">
+            <div class="col-xs-12 col-sm-3 col-md-3 nyhetsarkiv">
                 <div>
-                    <p><b>Nyhetsarkiv</b></p>
+                    <p class="rubrik-nyhetsarkiv"><b>Nyhetsarkiv</b></p>
                     <a class="link" href="#" style="text-align:left">April 2017</a><br />
                     <a class="link" href="#" style="text-align:left">Mars 2017</a><br />
                 </div>
