--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -6,10 +6,10 @@
 <center><h2 class="sidrubrik">Våra fastigheter</h2></center>
 
 <div class="maincontainer1">
-    <div class="maincontainer row">
-        
-        <div class="row">
-       
+    <div class="maincontainer row ontop">
+
+        <div class="row ">
+
 
             <div class=" col-md-8 divfastigheter2">
                 <div class="col-sm-4 divleft2">
@@ -31,20 +31,20 @@
 
                 <div class="col-sm-4">
                     <p>Sök på adress</p>
-                    
-                        
-                            <div id="imaginary_container" style="width:200px;">
-                                <div class="input-group stylish-input-group">
-                                    <input type="text" class="form-control" placeholder="Sök">
-                                    <span class="input-group-addon">
-                                        <button type="submit">
-                                            <span class="glyphicon glyphicon-search"></span>
-                                        </button>
-                                    </span>
-                                </div>
-                            </div>
-                        
-                 
+
+
+                    <div id="imaginary_container" style="width:200px;">
+                        <div class="input-group stylish-input-group">
+                            <input type="text" class="form-control" placeholder="Sök">
+                            <span class="input-group-addon">
+                                <button type="submit">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+
+
                 </div>
 
                 <br />
@@ -52,7 +52,7 @@
                 <br />
                 <legend style="color:#e93523">3 Fastigheter</legend>
                 <div class="row divfastigheter3 objekt">
-                    
+
                     <div class="col-md-4">
                         <center><img class="img-responsive" src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt=""></center>
                     </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-              
+
                 <hr size="1" color="#996633">
                 <div class="row objekt">
                     <div class="col-md-4">
@@ -104,7 +104,7 @@
 
                     </div>
                 </div>
-               
+
                 <hr size="1" color="#996633">
                 <div class="row objekt">
                     <div class="col-md-4">
@@ -132,18 +132,18 @@
                 </div>
             </div>
             <div class=" col-md-4 divfastigheter">
-                
-                    <p><b style="background-color:white;">Läs mer om våra fastigheter</b></p>
-                  
-                    <div class="link1">
-                        <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br />
-                        </div>
+
+                <p><b style="background-color:white;">Läs mer om våra fastigheter</b></p>
+
+                <div class="link1">
+                    <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br />
+                </div>
                 <div class="link2">
                     <a class="link" href="~/Home/seriorboende" style="text-align:left">Seniorboende 55+</a><br />
                 </div>
-                  
+
             </div>
         </div>
-                </div>
+    </div>
     </div>
         
