--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -6,12 +6,11 @@
 <center><h2 class="sidrubrik">Våra fastigheter/Studentboende</h2></center>
 
 <div class="maincontainer1">
-    <br />
-    <br />
-    <div class="row">
+ 
+    <div class="row ontop">
         <div class="col-sm-4 col-md-4 col-lg-4">
-        <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
-            </div>
+            <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
+        </div>
     </div>
     <br />
     <br />
