ändrat på startsidan, flyttat stycket varför ska man hyra hos oss? till om oss istället.

--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -19,11 +19,13 @@
 <div class="maincontainer1">
 
     <div class="row ontop">
+       
+        <h1 style="text-align:center; color: #e93523; margin-bottom: 30px;">För folk som tycker om att bo!</h1>
+        <div class="col-md-3 col-sm-3 col-lg-3" >
+        </div> <div class="col-md-6 col-sm-6 col-lg-6 indexcarousel">
 
-        <div class="col-md-7 col-sm-7 col-lg-7 indexcarousel">
-          
             <div class="mainbody">
-                <h2 style="text-align:center; color: #e93523">För folk som tycker om att bo!</h2>
+                <hr /><h2 style="text-align:center; color: black;">Våra fastigheter</h2><hr />
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -63,13 +65,13 @@
                     </a>
                 </div>
             </div>
-            <a class="link" href="~/Home/Varafastigheter">Våra fastigheter >></a>
+            <a class="link" href="~/Home/Varafastigheter">Se fler av våra fastigheter >></a>
 
 
         </div>
-        <div class="col-md-5 col-sm-5 col-lg-5">
+        @*<div class="col-md-5 col-sm-5 col-lg-5">
             <div>
-                <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
+                <h2 style="text-align: left; color: black;">Varför ska man hyra av oss?</h2>
                 <div>
                     <p style="font-size:16px;">
                         Vi har ägande, skötsel och drift i egen regi.
@@ -82,24 +84,22 @@
             </div>
             <br />
             <br />
-            <p style="font-size:x-large; text-align:center;">
-                Att hyra din bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
-            </p>
+         
             <br />
             <br />
-        </div>
+        </div>*@
         </div>
     <br />
     <br />
-    <hr />
+  
     
         <div class=" row" style="margin-left:5%; margin-right:5%;">
             
             <br />
             <div class=" col-md-9 col-sm-10 nyhetindex">
-                <h2>Senaste nytt</h2>
+                <hr /><h2 style="text-align:center;">Senaste nytt</h2><hr />
                 <div class="nyhet " style="text-align: center; margin: auto;">
-                    <h2>Glad påsk!</h2>
+                    <h3>Glad påsk!</h3>
                     <p style="text-align:left;">
                         Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                         Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
@@ -126,11 +126,16 @@
     <hr />
     <br />
     <br />
-    <div class="col-md-4 col-sm-6 facebook"  style="float:none; margin:auto;">
-        <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
-        <br />
-        <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
-    </div>   
+   
+        <div class="col-md-4 col-sm-6 facebook" style="float:none; margin:auto;">
+            <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
+            <br />
+            <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+       
+    </div>
+    <p style="font-size:x-large; text-align:center; margin-top: 40px;">
+    Att hyra bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
+</p>
     <br />
     </div>
 
