--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -25,8 +25,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-sm-3 omoss">
-                            <h4 style="color: #e93523">Vår vision</h4>
-                            <p>Lorem ipsum dolor..</p>
+                            <h4 style="color: #e93523">Varför ska man hyra av oss?</h4>
+                            <p>Vi har ägande, skötsel och drift i egen regi.
+<br />
+                        Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
                         </div>
                         <div class="col-sm-3 omoss">
                             <h4 style="color: #e93523">Företagets nyckelord</h4>
