--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -89,8 +89,7 @@
             <br />
         </div>*@
         </div>
-    <br />
-    <br />
+   
   
     
         <div class=" row" style="margin-left:5%; margin-right:5%;">
@@ -128,14 +127,14 @@
     <br />
    
         <div class="col-md-4 col-sm-6 facebook" style="float:none; margin:auto;">
-            <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
-            <br />
+            <h3 class=" facebook-rubrik">Gilla oss på Facebook</h3>
+            
             <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
        
     </div>
-    <p style="font-size:x-large; text-align:center; margin-top: 40px;">
+    <h3 style="text-align:center; margin-top: 40px;">
     Att hyra bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
-</p>
+</h3>
     <br />
     </div>
 
