--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -13,13 +13,13 @@
 <div class="maincontainer1">
 
     <div class="row ontop">
-        <div class=" col-md-1 flikleft flik"><button class="flikbutton btnleft" id="flikbtn1" type="button" onclick="hideshown2()">Privatperson</button></div>
-        <div class=" col-md-1 flik"><button class="flikbutton" id="flikbtn2" type="button" onclick="hideshown();">Företag</button></div>
+        <div class="col-xs-4 col-sm-2 col-md-1 col-lg-1 flikleft flik"><button class="flikbutton btnleft" id="flikbtn1" type="button" onclick="hideshown2()">Privatperson</button></div>
+        <div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 flik flik-right" ><button class="flikbutton" id="flikbtn2" type="button" onclick="hideshown();">Företag</button></div>
 
     </div>
     <div class="row">
         
-        <div class="col-md-5 leftdiv felanmalan">
+        <div class="col-md-5 col-sm-5 col-lg-5 leftdiv felanmalan">
             <div class="form-group">
                 <div class="falt">
                     <label>Namn: *</label>
@@ -92,7 +92,7 @@
                 </div>
                     <br />
                 <div class="falt">
-                    <div class="col-md-10">
+                    <div class="col-md-10 col-xs-12">
                         <label style="margin-bottom: 1px;">Får vi gå in med huvudnyckel? *</label><br />
                                 <form>
                                     <input type="radio" name="val" value="ja"> Ja
@@ -102,7 +102,7 @@
                 </div>
                 <br />
                 <div class="falt" id="hund">
-                    <div class="col-md-10">
+                    <div class="col-md-10 col-xs-10">
                     <label style="margin-top:5px; margin-bottom: 1px;">Har ni hund? *</label>
                         <form>
                             <input type="radio" name="val" value="ja"> Ja
@@ -112,7 +112,7 @@
                 </div>
                 <br />
                 <div class="falt">
-                    <div class="col-md-10" id="katt">
+                    <div class="col-md-10 col-xs-10" id="katt">
                         <label style="margin-top:5px; margin-bottom: 1px;">Har ni katt? *</label>
                         <form>
                             <input type="radio" name="val" value="ja"> Ja
@@ -126,9 +126,9 @@
                     </div>
             </div>
         </div>
-        <div class="col-md-4 rightdiv">
+        <div class="col-md-4 col-sm-4 col-lg-4 rightdiv"  >
             <p style="text-align:center;"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></p>
-            <p>
+            <p class="felanmalan-info">
                 <br /><b>
                 Om ni ej fått återkoppling inom 1-2 veckor efter att
                 felanmälan har skickats, var vänlig och ring oss på
@@ -136,7 +136,7 @@
                       </b>
                 <br />
                 <br />Ni kan även ringa vårt kontor för att göra en felanmälan 
-                <br />på telefonnummer: 019-16 43 70.
+                på telefonnummer: 019-16 43 70.
                 <br />
                 <br />Kontorets öppettider:
                 <br />Måndag – Fredag kl: 07:30-16:30.
