--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
        
             <div class="rightimage">
                 <center>
-                    <img src="~/Content/Images/headerje1.png" style="width:100%;">
+                    <img src="~/Content/Images/Header2.png" style="width:100%;">
                     <a class="leftimage" href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/transparent.png"></a>
                 </center>
 </div>
