--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -38,21 +38,27 @@
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
+                       
                         <div class="item active">
-                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
-                        </div>
-
-                        <div class="item">
-                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Karlslundsgatan 10 A-D">
+                            <div class=" carousel-caption">Karlslundsgatan 10 A-D</div>
                         </div>
                         <div class="item">
-                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Kyrkogatan 18-20">
+                            <div class=" carousel-caption">Kyrkogatan 18-20</div>
                         </div>
                         <div class="item">
-                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Adress">
+                            <div class=" carousel-caption">Adress</div>
                         </div>
                         <div class="item">
-                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Adress">
+                            <div class=" carousel-caption">Adress</div>
+                        </div>
+                      
+                        <div class="item ">
+                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Rynningegatan 27-37">
+                        <div class=" carousel-caption">Rynningegatan 27-37</div>
                         </div>
                     </div>
 
