fixat med länkar, ändrat så att det är en snyggare bild (fyrkantig osv)

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -58,8 +58,8 @@
                         Hyresinbetalningar<br />
                         Personalansvarig<br />
                         019 - 16 43 72<br />
-                        anna@je-bygg.se
-                    </p>
+                        <a href="mailto:anna@je-bygg.se" target="_blank">anna@je-bygg.se</a>
+</p>
                 </div>
                 <div class="col-sm-3">
                     <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt=""></center>
@@ -67,8 +67,8 @@
                     <p>
                         Ekonomichef/Kamrer<br />
                         019 - 16 43 71<br />
-                        marie@je-bygg.se
-                    </p>
+                        <a href="mailto:marie@je-bygg.se" target="_blank">marie@je-bygg.se</a>
+</p>
                 </div>
                 <div class="col-sm-3">
                     <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt=""></center>
@@ -76,8 +76,8 @@
                     <p>
                         Fastighetsförvaltare<br />
                         019 - 16 43 76 <br />
-                        lena@je-bygg.se
-                    </p>
+                        <a href="mailto:lena@je-bygg.se" target="_blank">lena@je-bygg.se</a>
+</p>
                 </div>
             </div>
 
@@ -89,8 +89,8 @@
                         Receptionist <br />
                         Bostadsförmedlare (Örebro)<br />
                         019 - 16 43 70<br />
-                        info@je-bygg.se
-                    </p>
+                        <a href="mailto:info@je-bygg.se" target="_blank">info@je-bygg.se</a>
+</p>
                     <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan >></a>
                 </div>
                 <div class="col-sm-3">
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
                     <h4>Adis</h4>
                     <p>
                         Ekonomiassistent
@@ -169,7 +169,7 @@
             <h4>Örjan Åkerstrand</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
             <h4>Richard Gustafsson</h4>
         </div>
         <div class="col-sm-3">
@@ -177,14 +177,14 @@
             <h4>Sten Arnsheml</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
             <h4>Mikael Sabri</h4>
         </div>
 
     </div>
     <div class="row">
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
             <h4>Britt-Marie Jansson</h4>
         </div>
         
