rätt bilder på student, la till namn på alla bilder samt beskrivning på dom. Snyggade till karusellen då bilderna va mindre.

--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -76,7 +76,10 @@
                     </div>
                 </div>
             </div>
-           <div class="col-md-6">
+            <div class="col-md-1">
+
+            </div>
+           <div class="col-md-4">
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -88,13 +91,16 @@
                         <div class="carousel-inner" role="listbox">
                                                    
                             <div class="item active">
-                                <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                                <img src="~/Content/Images/erikrosenbergsväg.PNG" alt="Erik Rosenbergsväg 1">
+                                <div class="carousel-caption">Erik RosenbergsVäg 1 </div>
                             </div>
                             <div class="item">
-                                <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                                <img src="~/Content/Images/salsmästargatan.png" alt="Salsmästaregatan 24-52">
+                                <div class="carousel-caption">Salsmästaregatan 24-52 </div>
                             </div>
                             <div class="item">
-                                <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                                <img src="~/Content/Images/tärnvägen.png" alt="Tärnvägen 12-20 ">
+                                <div class="carousel-caption">Tärnvägen 12-20</div>
                             </div>
                         </div>
 
@@ -106,13 +112,13 @@
                         </a>
                     </div>
 
-               <div class="col-sm-6">
-                   <h3>Bra länkar för dig som är student</h3>
+               <div class="col-sm-8">
+                   <h3>Bra länkar för dig som student</h3>
                    <h5>
-                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
+                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys - Matbutik</a><br />
                        <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
-                       <a href="http://www.lanstrafiken.se/Orebro/">Busstidtabell i Örebro</a><br />
-                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB</a><br />
+                       <a href="http://www.lanstrafiken.se/Orebro/">Länstrafiken - Busstidtabell</a><br />
+                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB - Lågprisvaruhus</a><br />
                        <a href="https://www.sj.se/">SJ</a>
                    </h5>
 
