--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -26,7 +26,7 @@
                     </h3>
 
                     <br />
-                    <p style=" text-align:left;">
+                    <p style="text-align:left;">
                         Nära Till klassas av Örebro kommun som ett seniorboende Kategori 3. Det är den högsta kategorin och ett erkännande av vår fina service. <br />
                         <br />Seniorboendet Nära Till invigdes vintern 1997. Det är beläget i den gamla brandstationen mitt i centrala Örebro med gångavstånd till allt vad en stad kan erbjuda. Galleriorna Vågen och Krämaren ligger bara 300 meters gångväg bort. Fastigheten ägs av Fastighetsförvaltare Stieg Ekström, som ansvarar för anvisning av lägenheter samt har hand om hyreskön. <a class=" link" href="~/Home/Intresseanmalan">Intresseanmälan >></a>
                         <br />
@@ -36,7 +36,7 @@
             </div>
         </center>
 
-        <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
+        <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida: <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
 
     </div>
     </div>
