--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -22,6 +22,7 @@
                         <br />
                     </div>
                 </div>
+               
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-sm-3 omoss">
@@ -43,7 +44,12 @@
                             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
                             <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
                         </div>
+                        <br />
                     </div>
+                </div>
+                <div class="row">
+                    <img class="img-responsive" src="~/Content/Images/HeaderSmal.png" alt="Bildtext">
+
                 </div>
             </div>
         </div>
